--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ te {
 .barb {
   background: #2c3e70;
   border-top: 1px solid rgba(200, 200, 200, 1);
-  width: 346px;
+  width: 100%;
   height: 50px;
   margin-top: 500px;
   padding: 15px;
